--- a/public/werken/index.html
+++ b/public/werken/index.html
@@ -37,6 +37,10 @@ Link: [eventueel]
     <h2><a href="/werken/iedereen-is-welkom-op-camping-het-vrije-veld-3/">Iedereen Is Welkom Op Camping Het Vrije Veld 3</a></h2>
     2024, Interactieve installatie met video en audio Voor Theaterfestival Vuurol is Camping &rsquo;t Vrije Veld omgebouwd tot een interactieve installatie. Lopend over de camping luisterden de gasten naar audiofragmenten over vrijheid en gevangenschap. Geconfronteerd met camera toezicht en regels voor het &lsquo;algemeen belang&rsquo;, werden vragen opgeworpen: is het belangrijk dat jij het naar je zin hebt? Of is het belang van het collectief meer leidend? Wat betekent jouw vrijheid voor de ander?
   
+    <h2><a href="/werken/testtest/">Testtest</a></h2>
+    [jaar en medium] [beschrijving]
+Link: [eventueel] hoi ik probeer dit op de site tevoorschijn te toveren
+  
 
   </main>
   <footer>
