--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,8 @@
   <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
 <title>Madelon ter Borg</title>
-
-    <link rel="stylesheet" href="/css/main.css">
-
-
-      <script src="/js/main.js"></script>
-
+<link rel="stylesheet" href="/css/style.css">
+<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
 </head>
 <body>
