--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
 <title>Madelon ter Borg</title>
 <link rel="stylesheet" href="/css/style.css">
 <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+<!-- Include the script that enables Netlify Identity on this page. -->
+<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
 </head>
 <body>
@@ -31,5 +33,7 @@ excepteur excepteur pariatur nostrud qui irure ullamco.</p>
     <small>Copyright 2025.</small>
 
   </footer>
+  <!-- Include the script that builds the page and powers Decap CMS -->
+  <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
 </body>
 </html>
