--- a/public/over/index.html
+++ b/public/over/index.html
@@ -5,7 +5,9 @@
 <meta name="viewport" content="width=device-width">
 <title>Madelon ter Borg</title>
 <link rel="stylesheet" href="/css/style.css">
+
 <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+<link href="/admin/config.yml" type="text/yaml" rel="cms-config-url">
 
 </head>
 <body>
@@ -29,5 +31,7 @@
     <small>Copyright 2025.</small>
 
   </footer>
+
+
 </body>
 </html>
