--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
 <meta name="viewport" content="width=device-width">
 <title>Madelon ter Borg</title>
 <link rel="stylesheet" href="/css/style.css">
+
 <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-<!-- Include the script that enables Netlify Identity on this page. -->
-<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+<link href="/admin/config.yml" type="text/yaml" rel="cms-config-url">
 
 </head>
 <body>
@@ -33,7 +33,7 @@ excepteur excepteur pariatur nostrud qui irure ullamco.</p>
     <small>Copyright 2025.</small>
 
   </footer>
-  <!-- Include the script that builds the page and powers Decap CMS -->
-  <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+
+
 </body>
 </html>
