--- a/public/werken/index.html
+++ b/public/werken/index.html
@@ -5,7 +5,9 @@
 <meta name="viewport" content="width=device-width">
 <title>Madelon ter Borg</title>
 <link rel="stylesheet" href="/css/style.css">
+
 <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+<link href="/admin/config.yml" type="text/yaml" rel="cms-config-url">
 
 </head>
 <body>
@@ -23,21 +25,13 @@
   <h1>Werken</h1>
   
   
-    <h2><a href="/werken/das-ende-das-kapitalismus/">Das Ende Das Kapitalismus</a></h2>
-    2024, Installatie met video en audio Om de aarde te redden moeten we terug naar het consumptieniveau van 1978. Dat is wat Ulrike Hermann schrijft in haar boek Das Ende des Kapitalismus. Een flinke stap terug, naar ongeveer de helft van wat we nu consumeren in 2024. Kunnen we dat nog?
-  
-    <h2><a href="/werken/iedereen-is-welkom-op-camping-het-vrije-veld-2/">Iedereen Is Welkom Op Camping Het Vrije Veld 2</a></h2>
-    2023, Installatie met video en audio [beschrijving]
-Link: [eventueel] 
-  
-    <h2><a href="/werken/iedereen-is-welkom-op-camping-het-vrije-veld-3/">Iedereen Is Welkom Op Camping Het Vrije Veld 3</a></h2>
-    2024, Interactieve installatie met video en audio Voor Theaterfestival Vuurol is Camping &rsquo;t Vrije Veld omgebouwd tot een interactieve installatie. Lopend over de camping luisterden de gasten naar audiofragmenten over vrijheid en gevangenschap. Geconfronteerd met camera toezicht en regels voor het &lsquo;algemeen belang&rsquo;, werden vragen opgeworpen: is het belangrijk dat jij het naar je zin hebt? Of is het belang van het collectief meer leidend? Wat betekent jouw vrijheid voor de ander?
-  
 
   </main>
   <footer>
     <small>Copyright 2025.</small>
 
   </footer>
+
+
 </body>
 </html>
